tests/resources/errors/errors6.ac
import std;
import std.Error;

#aborts
struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }
}

fn foo() -> int {
    raise TestError{};
}

fn main() {
    foo();
}